--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,4 @@
-@import "css/reset.css";
-@import "css/global.css";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import "reset.css";
+@import "global.css";
+@import "footer.css";
