--- a/css/navigation.css
+++ b/css/navigation.css
@@ -2,4 +2,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 75px;
+  margin: auto;
+  background-color: white;
+  border-bottom: 1px solid #e6e6e6;
+  padding: 0 40px;
+}
+
+.navigation__search {
+  padding-top: 10px;
+  padding-left: 30px;
 }
