--- a/css/feed.css
+++ b/css/feed.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: none;
 }
 
 .photo {
@@ -10,9 +11,13 @@
   border: 1px solid #e6e6e6;
   background-color: white;
   margin-top: 60px;
+  width: 80%;
 }
 
 .photo__header {
   display: flex;
   align-items: center;
+}
+.photo__image{
+  width: 100%;
 }
