--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:200,400,600,700');
 @import "reset.css";
 @import "global.css";
 @import "footer.css";
@@ -6,3 +6,4 @@
 @import "navigation.css";
 @import "explore.css";
 @import "feed.css";
+@import "profile.css";
