--- a/css/profile.css
+++ b/css/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  max-width: 80%;
+  max-width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,17 +9,12 @@
 
 .profile__header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  height: 156px;
-  box-sizing: border-box;
-  margin-bottom: 45px;
-  max-width: 100%;
+  margin-bottom: 50px;
 }
 
 .profile__user-info {
-  margin-left: 96px;
-  width: 40%;
+  width: 65%;
 }
 
 .profile__avatar {
@@ -51,6 +46,10 @@
   font-size: 14px;
   font-weight: 700;
 }
+.profile__edit-btn button:active,
+.profile__edit-btn button:focus {
+  outline: none;
+}
 
 .profile__counts {
   margin-bottom: 24px;
@@ -81,13 +80,46 @@
 }
 .profile__photo-row{
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  max-width: 100%;
-  min-width: 80%;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.profile__photo{
+  height:32%;
+  position: relative;
+  overflow: hidden;
+
+}
+.profile__photo img{
+/*width: 150%;
+min-width: 100%;*/
+/*position: absolute;*/
+top: 0;
+left: 0;
 }
 
-.profile__photo img{
-  max-width: 100%;
+.profile__photo-overlay{
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+display: flex;
+align-items: center;
+justify-content: center;
+opacity: 0;
+}
 
+.profile__photo-stat{
+  color: white;
+  font-weight: 700;
+}
+
+.profile__photo:hover .profile__photo-overlay {
+  opacity: 1;
+}
+.profile__photo-stat:first-child{
+  margin-right: 25px;
 }
