--- a/css/edit-profile.css
+++ b/css/edit-profile.css
@@ -1,20 +1,19 @@
 .edit-profile{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 32px;
+  width: 90%;
+  margin: 0 auto;
   margin-top: 60px;
   background-color: white;
-  border: 0;
-  border-radius: 3px;
+  border-radius: 5px;
   border: 1px solid #e6e6e6;
-  max-width: 80%;
+  padding: 35px 0;
+  box-sizing: border-box;
 
 }
 .edit-profile__header{
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  margin-bottom: 50px;
 }
 .edit-profile__header img{
   width: 40px;
@@ -26,10 +25,24 @@
   font-size: 24px;
 }
 .form{
-  margin-top: 50px;
+
+}
+.form__row{
+  display: flex;
+
 }
 .form__name{
   text-align: right;
   font-size: 16px;
   font-weight: 700;
+}
+.form__row input{
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 10px 5px 7px 5px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  font-size: 14px;
 }
