--- a/css/edit-profile.css
+++ b/css/edit-profile.css
@@ -20,29 +20,66 @@
   height: 40px;
   border-radius: 50%;
 }
-.edit-profile__title{
-  margin-left: 32px;
-  font-size: 24px;
-}
-.form{
 
+.edit-profile__avatar-container {
+  width: 160px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 35px;
+}
+.edit-profile__title{
+  font-size: 24px;
 }
 .form__row{
   display: flex;
+margin-bottom: 20px;
+align-items: center;
+}
 
+.form__row .form__name {
+  width: 160px;
+  display: block;
+  text-align: right;
+  margin-right: 35px;
+  font-weight: 700;
+}
+.form__row input,
+.form__row textarea,
+.form__row select {
+  padding: 10px;
+  width: 35%;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  resize: vertical;
+  font-size: 14px;
 }
 .form__name{
   text-align: right;
   font-size: 16px;
   font-weight: 700;
+  width: 160px;
+  display: block;
 }
-.form__row input{
-  width: 100%;
-  margin-bottom: 5px;
-  padding: 10px 5px 7px 5px;
-  box-sizing: border-box;
+.form__outside-label {
+  margin-left: 10px;
+  display: block;
+  width: 40%;
+}
+.form__row input[type="checkbox"] {
+  width: auto;
+}
+.form__row input[type="submit"] {
+  width: 100px;
+  color: white;
+  font-weight: 700;
+  background-color: #3897f0;
   border: 0;
   border-radius: 3px;
-  border: 1px solid #e6e6e6;
   font-size: 14px;
+  padding: 5px 0;
+}
+.form__index{
+
 }
