--- a/css/navigation.css
+++ b/css/navigation.css
@@ -45,4 +45,27 @@
   color: #6e6e6e;
   font-size: 24px;
   margin-left: 24px;
-}
+  display: inline-block;
+  animation: .5s menuLink linear forwards;
+  opacity: 0;
+  }
+
+  #compass {
+  }
+  #heart {
+    animation-delay: .3s;
+  }
+  #user {
+    animation-delay: .5s;
+  }
+
+  @keyframes menuLink {
+    from {
+      opacity: 0;
+      transform: translateY(-10px);
+    }
+    to {
+      opacity: 1;
+      transform: none;
+    }
+  }
