--- a/css/profile.css
+++ b/css/profile.css
@@ -9,12 +9,13 @@
 
 .profile__header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 50px;
 }
 
 .profile__user-info {
   width: 65%;
+  margin-left: 50px;
 }
 
 .profile__avatar {
@@ -46,8 +47,8 @@
   font-size: 14px;
   font-weight: 700;
 }
-.profile__edit-btn button:active,
-.profile__edit-btn button:focus {
+
+.profile__edit-btn button:active, .profile__edit-btn button:focus {
   outline: none;
 }
 
@@ -65,54 +66,60 @@
 .profile__number {
   font-weight: 700;
 }
-.profile__bio{
+
+.profile__bio {
   font-size: 16px;
 }
-.profile__bio a{
+
+.profile__bio a {
   text-decoration: none;
   color: inherit;
 }
-.profile__full-name{
+
+.profile__full-name {
   font-weight: 700;
 }
-.profile__photos{
+
+.profile__photos {
   max-width: 100%
 }
-.profile__photo-row{
+
+.profile__photo-row {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
 }
-.profile__photo{
-  height:32%;
+
+.profile__photo {
+  height: 32%;
   position: relative;
   overflow: hidden;
-
 }
-.profile__photo img{
-/*width: 150%;
+
+.profile__photo img {
+  /*width: 150%;
 min-width: 100%;*/
-/*position: absolute;*/
-top: 0;
-left: 0;
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
 }
 
-.profile__photo-overlay{
+.profile__photo-overlay {
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-display: flex;
-align-items: center;
-justify-content: center;
-opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
 }
 
-.profile__photo-stat{
+.profile__photo-stat {
   color: white;
   font-weight: 700;
 }
@@ -120,6 +127,7 @@ opacity: 0;
 .profile__photo:hover .profile__photo-overlay {
   opacity: 1;
 }
-.profile__photo-stat:first-child{
+
+.profile__photo-stat:first-child {
   margin-right: 25px;
 }
