--- a/css/profile.css
+++ b/css/profile.css
@@ -131,3 +131,53 @@ min-width: 100%;*/
 .profile__photo-stat:first-child {
   margin-right: 25px;
 }
+
+.profileOverlay {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: none;
+}
+.profileOverlay-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+
+}
+.profileOverlay__links{
+  border: 0;
+  border-radius: 3px;
+}
+.profileOverlay i {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  color: white;
+}
+.profileOverlay__link{
+  background-color: white;
+  width: 450px;
+  padding: 20px 0;
+  box-sizing: border-box;
+  text-align: center;
+  border-bottom: 1px solid #e6e6e6;
+  transition: background-color .3s ease;
+
+}
+.profileOverlay__link:hover{
+  background-color: #efefef;
+}
+.profileOverlay__link a{
+
+  color: #262626;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.profileOverlay__link:last-child{
+  border-bottom: 0;
+}
